# ginbackend/docs/swagger.json
@@ -190,156 +190,6 @@
                 }
             }
         },
-        "/dummies/": {
-            "post": {
-                "description": "Creates a dummy.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Dummy"
-                ],
-                "summary": "Creates a dummy.",
-                "parameters": [
-                    {
-                        "description": "Request payload",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/services.DummyDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/services.Dummy"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/dummies/{id}": {
-            "get": {
-                "description": "Gets a dummy.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Dummy"
-                ],
-                "summary": "Gets a dummy.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Dummy ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/services.Dummy"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "post": {
-                "description": "Updates an existing dummy.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Dummy"
-                ],
-                "summary": "Updates an existing dummy.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Dummy ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Request body",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/services.DummyDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/services.Dummy"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "delete": {
-                "description": "Deletes an existing dummy.",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Dummy"
-                ],
-                "summary": "Deletes an existing dummy.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Dummy ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
         "/health": {
             "get": {
                 "description": "Health check ping",
@@ -360,9 +210,49 @@
                 }
             }
         },
+        "/scrape/indeed": {
+            "post": {
+                "description": "Scrapes an Indeed job page. Accepts a \"candidate\" and ranks the candidate against the job postings if the flag is selected.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Scrape"
+                ],
+                "summary": "Scrapes an indeed job page",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.ScrapeIndeedPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/services.ScrapedJob"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
         "/scrape/seek": {
             "post": {
-                "description": "Scrapes a seek job page for Software Engineering Jobs. Accepts a \"candidate\" and ranks the candidate against the job postings.",
+                "description": "Scrapes a seek job page. Accepts a \"candidate\" and ranks the candidate against the job postings if the flag is selected.",
                 "consumes": [
                     "application/json"
                 ],
@@ -380,7 +270,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.ScrapeSeekPayload"
+                            "$ref": "#/definitions/services.ScrapePayload"
                         }
                     }
                 ],
@@ -447,7 +337,7 @@
             "type": "object",
             "properties": {
                 "compatibilityPoint": {
-                    "$ref": "#/definitions/services.point"
+                    "$ref": "#/definitions/services.Point"
                 },
                 "createdAt": {
                     "type": "string"
@@ -465,19 +355,19 @@
                     "type": "string"
                 },
                 "locationMatch": {
-                    "$ref": "#/definitions/services.match"
+                    "$ref": "#/definitions/services.Match"
                 },
                 "requirementPoint": {
-                    "$ref": "#/definitions/services.point"
+                    "$ref": "#/definitions/services.Point"
                 },
                 "responsibilityScore": {
-                    "$ref": "#/definitions/services.score"
+                    "$ref": "#/definitions/services.Score"
                 },
                 "score": {
                     "type": "integer"
                 },
                 "skillsScore": {
-                    "$ref": "#/definitions/services.score"
+                    "$ref": "#/definitions/services.Score"
                 }
             }
         },
@@ -538,25 +428,6 @@
                     }
                 },
                 "summary": {
-                    "type": "string"
-                }
-            }
-        },
-        "services.Dummy": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "services.DummyDto": {
-            "type": "object",
-            "properties": {
-                "name": {
                     "type": "string"
                 }
             }
@@ -636,6 +507,25 @@
                 }
             }
         },
+        "services.Match": {
+            "type": "object",
+            "properties": {
+                "isMatch": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "services.Point": {
+            "type": "object",
+            "properties": {
+                "explanation": {
+                    "type": "string"
+                },
+                "isValid": {
+                    "type": "boolean"
+                }
+            }
+        },
         "services.Qualification": {
             "type": "object",
             "properties": {
@@ -652,11 +542,36 @@
                 }
             }
         },
-        "services.ScrapeSeekPayload": {
+        "services.Score": {
+            "type": "object",
+            "properties": {
+                "explanation": {
+                    "type": "string"
+                },
+                "score": {
+                    "type": "integer"
+                }
+            }
+        },
+        "services.ScrapeIndeedPayload": {
+            "type": "object",
+            "properties": {
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "services.ScrapePayload": {
             "type": "object",
             "properties": {
                 "candidate": {
                     "$ref": "#/definitions/services.Candidate"
+                },
+                "shouldAssess": {
+                    "type": "boolean"
+                },
+                "url": {
+                    "type": "string"
                 },
                 "userId": {
                     "type": "string"
@@ -696,36 +611,6 @@
             "properties": {
                 "description": {
                     "type": "string"
-                }
-            }
-        },
-        "services.match": {
-            "type": "object",
-            "properties": {
-                "isMatch": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "services.point": {
-            "type": "object",
-            "properties": {
-                "explanation": {
-                    "type": "string"
-                },
-                "isValid": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "services.score": {
-            "type": "object",
-            "properties": {
-                "explanation": {
-                    "type": "string"
-                },
-                "score": {
-                    "type": "integer"
                 }
             }
         }
